# easycnn

./: CMakeLists.txt  README.md  core.cc  easylinearmode.cc  train.cc  ylog.cc
